--- a/myproject/myapp/static/myapp/creative.css
+++ b/myproject/myapp/static/myapp/creative.css
@@ -120,6 +120,17 @@ aside {
     background-color: transparent;
 }
 
+.navbar.transparent.navbar-inverse .navbar-inner {
+    border-width: 0px;
+    -webkit-box-shadow: 0px 0px;
+    box-shadow: 0px 0px;
+    opacity: 70%;
+    background-color: rgba(0,0,0,0.0);
+    background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
+    background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
+    background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
+}
+
 @media(min-width:768px) {
     .navbar-default {
         border-color: black;
@@ -128,7 +139,7 @@ aside {
     }
 
     .navbar-default .navbar-header .navbar-brand {
-        color: black;
+        color: white;
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
@@ -138,12 +149,12 @@ aside {
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(255,255,255,.7);
+        color: black;
     }
 
     .navbar-default .nav > li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
-        color: #fff;
+        color: gray;
     }
 
     .navbar-default.affix {
@@ -153,12 +164,12 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        color: rgb(242, 239, 224);
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #eb3812;
+        color: gray;
     }
 
     .navbar-default.affix .nav > li>a,
